--- a/mcp-server/pyproject.toml
+++ b/mcp-server/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "dirsearch>=0.4.3.post1",
     "httpx>=0.28.1",
     "mcp[cli]>=1.24.0",
+    "setuptools<81",
 ]
